hphp/hack/test/typecheck/reactive/rx_of_scope12.php
<?hh
<<file: __EnableUnstableFeatures('coeffects_provisional')>>

function f(): void {
}

<<__Rx>>
async function g(): Awaitable<void> {
  // ERROR
  await async {
    f();
  };
}
